<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cafe"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/backgroundPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A61B1A1A"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="UselessParent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="197dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/starbucks" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/cafe_house"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#F3F3F3"
            android:textColorLink="#0B531A"
            android:textSize="20sp"
            android:textStyle="normal"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#F3F3F3"
            android:textColorLink="#0B531A"
            android:textSize="20sp"
            android:textStyle="normal"
            app:cornerRadius="100dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_2024_cafe_house_all_rights_reserved"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>