<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sign_In_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible"
                    tools:ignore="UselessParent"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="197dp"
                        android:layout_height="152dp"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/starbucks" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="@string/cafe_house"
                        android:textColor="@color/green"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editTextTextEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="someone@gmail.com"
                            android:inputType="textEmailAddress"
                            android:padding="15dp" />

                        <EditText
                            android:id="@+id/editTextTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:padding="15dp" />

                        <Button
                            android:id="@+id/loginButton"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/green"
                            android:backgroundTintMode="src_over"
                            android:fontFamily="sans-serif-black"
                            android:hapticFeedbackEnabled="false"
                            android:padding="10dp"
                            android:text="Login"
                            android:textColor="#FFFFFF"
                            android:textColorHighlight="#F3F3F3"
                            android:textColorLink="#0B531A"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            app:cornerRadius="100dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/view"
                            android:layout_width="50dp"
                            android:layout_height="3dp"
                            android:layout_gravity="center"
                            android:layout_weight="0"
                            android:background="@color/green"
                            android:backgroundTint="@color/green" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_margin="5dp"
                            android:layout_weight="0"
                            android:fontFamily="cursive"
                            android:gravity="center"
                            android:text="@string/or"
                            android:textSize="24sp"
                            android:textStyle="bold|italic" />

                        <View
                            android:id="@+id/view2"
                            android:layout_width="50dp"
                            android:layout_height="3dp"
                            android:layout_gravity="center"
                            android:layout_weight="0"
                            android:background="@color/green"
                            android:backgroundTint="@color/green" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/blue"
                            android:backgroundTint="@color/blue"
                            android:drawablePadding="1dp"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="@string/facebook"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/yellow"
                            android:backgroundTint="@color/yellow"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="Google"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/linkToSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Don't have an account ? Register"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
        </ScrollView>
    </LinearLayout>
    </LinearLayout>